fitur sudah ditengah semua

--- a/main/templates/landing.html
+++ b/main/templates/landing.html
@@ -82,29 +82,29 @@
 		</div>
 	</div>
 	
-	<div id="moviverse-featured-menu" class="moviverse-section" >
+	<div id="moviverse-featured-menu" class="moviverse-section">
 		<div class="container">
-			<div class="row">
-				<div class="col-md-12 moviverse-heading animate-box">
-					<h2>Our Features</h2>
-					<div class="row">
-						<div class="col-md-6">
-							<p>At MoviVerse, we're dedicated to enhancing your watching experience with our distinctive features. Our platform is designed to cater to your unique watching preferences and connect you with a vibrant community of true movie lovers.</p>
-						</div>
-					</div>
-				</div>
-				<!-- Search Feature -->
-				<div class="col-md-6 col-sm-8 col-xs-12 moviverse-item-wrap animate-box">
-					<div class="moviverse-item">
-						<img src="static/user/images/movie.gif" class="img-responsive" alt="moviverse Search Feature">
-						<h3>Search</h3>
-						<p>The Search feature enables you to quickly find movies by their titles. Whether you're looking for a specific film or just exploring your favorite genres, this feature makes it easy to locate what you’re searching for. Simply type in the title of a movie, and the system will provide you with instant results. Designed for simplicity and speed, the Search feature ensures you can effortlessly access the movies you want to watch in no time.
-						</p>
-					</div>
-				</div>
+		  <div class="row">
+			<div class="col-md-12 moviverse-heading animate-box">
+			  <h2>Our Features</h2>
+			  <p>
+				At MoviVerse, we're dedicated to enhancing your watching experience with our distinctive features. Our platform is designed to cater to your unique watching preferences and connect you with a vibrant community of true movie lovers.
+			  </p>
 			</div>
+			<!-- Search Feature -->
+			<div class="moviverse-item-wrap animate-box">
+			  <div class="moviverse-item">
+				<img src="static/user/images/movie.gif" class="img-responsive" alt="Moviverse Search Feature">
+				<h3>Search</h3>
+				<p>
+				  The Search feature enables you to quickly find movies by their titles. Whether you're looking for a specific film or just exploring your favorite genres, this feature makes it easy to locate what you’re searching for. Simply type in the title of a movie, and the system will provide you with instant results. Designed for simplicity and speed, the Search feature ensures you can effortlessly access the movies you want to watch in no time.
+				</p>
+			  </div>
+			</div>
+		  </div>
 		</div>
-	</div>	
+	  </div>
+	  
 
 	<div id="moviverse-blog" class="moviverse-section">
 		<div class="container">
