foto kelompok sudah

--- a/main/templates/landing.html
+++ b/main/templates/landing.html
@@ -106,7 +106,7 @@
 	  </div>
 	  
 
-	<div id="moviverse-blog" class="moviverse-section">
+	  <div id="moviverse-blog" class="moviverse-section">
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center moviverse-heading animate-box">
@@ -116,7 +116,7 @@
 			</div>
 			<div class="row">
 				<!-- Team Member 1 -->
-				<div class="col-md-4">
+				<div class="col-md-3 col-sm-6">
 					<div class="moviverse-blog animate-box">
 						<div class="blog-bg" style="background-image: url('static/user/images/surya.jpg');"></div>
 						<div class="blog-text">
@@ -126,38 +126,39 @@
 					</div>
 				</div>
 				<!-- Team Member 2 -->
-				<div class="col-md-4">
+				<div class="col-md-3 col-sm-6">
 					<div class="moviverse-blog animate-box">
 						<div class="blog-bg" style="background-image: url('static/user/images/rafli.jpg');"></div>
 						<div class="blog-text">
 							<h3 style="color: beige;">Muhammad Rafli Mahesa</h3>
-							<p>220178599348759813457</p>
+							<p>2206828140</p>
 						</div> 
 					</div>
 				</div>
 				<!-- Team Member 3 -->
-				<div class="col-md-4">
+				<div class="col-md-3 col-sm-6">
 					<div class="moviverse-blog animate-box">
 						<div class="blog-bg" style="background-image: url('static/user/images/bimo.jpg');"></div>
 						<div class="blog-text">
 							<h3 style="color: beige;">Bimantoro Widyadana</h3>
-							<p>220321534413</p>
+							<p>2206824306</p>
 						</div> 
 					</div>
 				</div>
 				<!-- Team Member 4 -->
-				<div class="col-md-4">
+				<div class="col-md-3 col-sm-6">
 					<div class="moviverse-blog animate-box">
 						<div class="blog-bg" style="background-image: url('static/user/images/bimo.jpg');"></div>
 						<div class="blog-text">
 							<h3 style="color: beige;">Farrel Muhammad Hanau</h3>
-							<p>223211325</p>
+							<p>2206081566</p>
 						</div> 
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+	
 		
 	<footer id="moviverse-footer" role="contentinfo" class="moviverse-section">
 			<div class="row copyright">
