--- a/static/main/css/button.css
+++ b/static/main/css/button.css
@@ -39,7 +39,7 @@
  .btn:hover .btn__text-out {
     transition: transform 1s cubic-bezier(0.32, 0.99, 0.49, 0.99), opacity 0.4s;
     transform: translateY(-33.333333%);
-    opacity: 1;
+    opacity: 0;
 }
  .btn:hover .btn__text-in {
     transition: 1s all cubic-bezier(0.32, 0.99, 0.49, 0.99);
@@ -69,6 +69,7 @@
     margin: auto;
     font-weight: 700;
     font-size: 1.6rem;
+    color: black;
     z-index: 10;
     font-family: 'Poppins', sans-serif;
     transition: transform 0.4s cubic-bezier(0.32, 0.99, 0.49, 0.99), opacity 0.4s;
