Fix bug and integrate wikidata uri

--- a/main/templates/landing.html
+++ b/main/templates/landing.html
@@ -147,9 +147,9 @@
 				<!-- Team Member 4 -->
 				<div class="col-md-3 col-sm-6">
 					<div class="moviverse-blog animate-box">
-						<div class="blog-bg" style="background-image: url('static/user/images/bimo.jpg');"></div>
+						<div class="blog-bg" style="background-image: url('static/user/images/hanaujpg.jpg');"></div>
 						<div class="blog-text">
-							<h3 style="color: beige;">Farrel Muhammad Hanau</h3>
+							<h3 style="color: beige;">Farrell Muhammad Hanau</h3>
 							<p>2206081566</p>
 						</div> 
 					</div>
