--- a/static/main/css/card.css
+++ b/static/main/css/card.css
@@ -4,7 +4,7 @@
     background: linear-gradient(49deg, #2d4de0 0, #9f71f0 30%, #fc6277 58%, #f8ef6f 95%);
 
     width: 200px;
-    height: 300px;
+    height: 350px;
     border-radius: 12px;
     overflow: hidden;
     position: relative;
@@ -32,25 +32,17 @@
 }
 
 .card img {
-    width: 100%; /* Sesuaikan lebar dengan card */
-    height: 60%; /* Proporsional tinggi gambar */
-    object-fit: contain; /* Pastikan gambar tidak terpotong */
-    border-radius: 12px 12px 0 0; /* Sudut membulat pada bagian atas */
+    width: 100%;
+    height: 60%; 
+    object-fit: contain; 
+    border-radius: 12px 12px 0 0; 
 }
 
 .card h3 {
-    font-size: 16px; /* Sesuaikan ukuran teks */
-    margin: 10px 0;
+    font-size: 20px; 
+    margin-top: 10%;
+    margin-bottom: 15%;
     color: #fff;
-}
-
-.card a {
-    display: inline-block;
-    text-decoration: none;
-    color: #ffab70;
-    font-size: 14px;
-    font-weight: bold;
-    margin-top: 10px;
 }
 
 .movie-placeholder {
