--- a/static/main/css/card.css
+++ b/static/main/css/card.css
@@ -2,7 +2,6 @@
 
 .card {
     background: linear-gradient(49deg, #2d4de0 0, #9f71f0 30%, #fc6277 58%, #f8ef6f 95%);
-
     width: 200px;
     height: 350px;
     border-radius: 12px;
@@ -18,7 +17,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    padding: 10px 15px; 
+    padding: 10px 15px;
     background-color: #222222;
     color: #ffffff;
     border-radius: 12px;
@@ -35,14 +34,33 @@
     width: 100%;
     height: 60%; 
     object-fit: contain; 
-    border-radius: 12px 12px 0 0; 
+    border-radius: 15px 15px 0 0; 
 }
 
 .card h3 {
-    font-size: 20px; 
+    font-size: 18px;
     margin-top: 10%;
     margin-bottom: 15%;
     color: #fff;
+    max-height: 50px; 
+    overflow: auto; 
+    text-align: center;
+    line-height: 1.2; 
+    scrollbar-width: thin; 
+    scrollbar-color: #666 #222; 
+}
+
+.card h3::-webkit-scrollbar {
+    width: 6px; /* Lebar scrollbar */
+}
+
+.card h3::-webkit-scrollbar-thumb {
+    background: #666; /* Warna scrollbar */
+    border-radius: 4px;
+}
+
+.card h3::-webkit-scrollbar-track {
+    background: #222; /* Latar belakang scrollbar */
 }
 
 .movie-placeholder {
