--- a/static/main/css/buttoninfo.css
+++ b/static/main/css/buttoninfo.css
@@ -2,10 +2,11 @@
  :root {
 	 --color-main: #a474ff;
 	 --color-main-second: #17f1d1;
-	 --color-main-third: #ff8a70;
+	 --color-main-third: #d5beb9;
 }
 
 .btninfo {
+    margin-top: auto;
     display: inline-block;
     height: 10%;
     width: 90%;
@@ -55,7 +56,7 @@
     font-size: 1.6rem;
     color: black;
     z-index: 10;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Cormorant Garamond", Georgia, serif;
     transition: transform 0.4s cubic-bezier(0.32, 0.99, 0.49, 0.99), opacity 0.4s;
 }
 
