--- a/static/main/css/card.css
+++ b/static/main/css/card.css
@@ -17,6 +17,10 @@
     bottom: 0;
     left: 0;
     right: 0;
+    display: flex;
+    flex-direction: column; 
+    justify-content: center; 
+    align-items: center;
     padding: 10px 15px;
     background-color: #222222;
     color: #ffffff;
