[FIX] perbaikan sedikit button

--- a/static/main/css/buttoninfo.css
+++ b/static/main/css/buttoninfo.css
@@ -2,7 +2,7 @@
  :root {
 	 --color-main: #a474ff;
 	 --color-main-second: #17f1d1;
-	 --color-main-third: #d5beb9;
+	 --color-main-third: #ece1df;
 }
 
 .btninfo {
