--- a/static/main/css/button.css
+++ b/static/main/css/button.css
@@ -1,10 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
- :root {
-	 --color-main: #a474ff;
-	 --color-main-second: #17f1d1;
-	 --color-main-third: #ffab70;
-}
-
 .container {
     padding-top: 1%;
     padding-bottom: 1%;
@@ -36,17 +29,20 @@
 .btn:hover .btn__bg {
     scale: 0.94;
 }
- .btn:hover .btn__text-out {
+
+.btn:hover .btn__text-out {
     transition: transform 1s cubic-bezier(0.32, 0.99, 0.49, 0.99), opacity 0.4s;
     transform: translateY(-33.333333%);
     opacity: 0;
 }
- .btn:hover .btn__text-in {
+
+.btn:hover .btn__text-in {
     transition: 1s all cubic-bezier(0.32, 0.99, 0.49, 0.99);
     transform: translateY(0);
     opacity: 1;
 }
- .btn:hover .btn__bg__layer-first, .btn:hover .btn__bg__layer-second, .btn:hover .btn__bg__layer-third {
+
+.btn:hover .btn__bg__layer-first, .btn:hover .btn__bg__layer-second, .btn:hover .btn__bg__layer-third {
     border-radius: 60% 60% 0 0;
     transform: translateY(1rem);
 }
@@ -60,7 +56,7 @@
 	 transition: transform 1s cubic-bezier(0.19, 1, 0.22, 1) 380ms, border-radius 0.2s cubic-bezier(0.19, 1, 0.22, 1) 670ms;
 }
 
-.btn__text-out, .btn__text-in {
+.btn__text-out {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -71,7 +67,22 @@
     font-size: 1.6rem;
     color: black;
     z-index: 10;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Cormorant Garamond", Georgia, serif;
+    transition: transform 0.4s cubic-bezier(0.32, 0.99, 0.49, 0.99), opacity 0.4s;
+}
+
+.btn__text-in {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    inset: 0;
+    margin: auto;
+    font-weight: 700;
+    font-size: 1.6rem;
+    color: rgb(255, 255, 255);
+    z-index: 10;
+    font-family: "Cormorant Garamond", Georgia, serif;
     transition: transform 0.4s cubic-bezier(0.32, 0.99, 0.49, 0.99), opacity 0.4s;
 }
 
@@ -98,7 +109,7 @@
     height: 100%;
     width: 100%;
     transition: transform 0.5s cubic-bezier(0.19, 1, 0.22, 1);
-    background-color: var(--color-main-third);
+    background-color: beige;
     border-radius: 50px;
     overflow: hidden;
     position: absolute;
