--- a/static/main/css/style.css
+++ b/static/main/css/style.css
@@ -1,14 +1,6 @@
-@font-face {
-    font-family: 'icomoon';
-    src: url("../../user/fonts/icomoon/icomoon.eot?srf3rx");
-    src: url("../../user/fonts/icomoon/icomoon.eot?srf3rx#iefix") format("embedded-opentype"), url("../../user/fonts/icomoon/icomoon.ttf?srf3rx") format("truetype"), url("../../user/fonts/icomoon/icomoon.woff?srf3rx") format("woff"), url("../../user/fonts/icomoon/icomoon.svg?srf3rx#icomoon") format("svg");
-    font-weight: normal;
-    font-style: normal;
-}
-
 body {
-    font-family: "Cormorant Garamond", Georgia, serif;
-    font-weight: 400;
+    font-family: Georgia, serif;
+    font-weight: 40px;
     font-size: 18px;
     line-height: 1.7;
     color: rgba(255, 255, 255, 0.3);
@@ -21,42 +13,10 @@ body {
     }
 }
 
-#moviverse-header .display-tc h1, #moviverse-header .display-tc h2,
-.moviverse-cover .display-tc h1,
-.moviverse-cover .display-tc h2 {
-  margin: 30px;
-  padding: 0;
+#moviverse-header .display-tc h1{
   color: white;
-}
-
-#moviverse-offcanvas {
-    position: absolute;
-    z-index: 1901;
-    width: 270px;
-    background: #000 url(../../user/images/broken_noise.png) repeat;
-    top: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    padding: 75px 40px 40px 40px;
-    overflow-y: auto;
-    display: none;
-    -moz-transform: translateX(270px);
-    -webkit-transform: translateX(270px);
-    -ms-transform: translateX(270px);
-    -o-transform: translateX(270px);
-    transform: translateX(270px);
-    -webkit-transition: 0.5s;
-    -o-transition: 0.5s;
-    transition: 0.5s;
-}
-
-.uppercase {
-    font-size: 14px;
-    color: #000;
-    margin-bottom: 10px;
-    font-weight: 700;
-    text-transform: uppercase;
+  font-style: normal;
+  font-family: serif;
 }
 
 .gototop {
@@ -98,35 +58,6 @@ body {
     outline: none;
 }
 
-#page {
-    position: relative;
-    overflow-x: hidden;
-    width: 100%;
-    height: 100%;
-    -webkit-transition: 0.5s;
-    -o-transition: 0.5s;
-    transition: 0.5s;
-}
-
-.offcanvas #page {
-    overflow: hidden;
-    position: absolute;
-}
-
-.offcanvas #page:after {
-    -webkit-transition: 2s;
-    -o-transition: 2s;
-    transition: 2s;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 101;
-    background: rgba(0, 0, 0, 0.7);
-    content: "";
-}
-
 a {
     color: #ea272d;
     -webkit-transition: 0.5s;
@@ -140,38 +71,9 @@ a:hover, a:active, a:focus {
     text-decoration: none;
 }
 
-#moviverse-offcanvas {
-    position: absolute;
-    z-index: 1901;
-    width: 270px;
-    background: #000 url(../../user/images/broken_noise.png) repeat;
-    top: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    padding: 75px 40px 40px 40px;
-    overflow-y: auto;
-    display: none;
-    -moz-transform: translateX(270px);
-    -webkit-transform: translateX(270px);
-    -ms-transform: translateX(270px);
-    -o-transform: translateX(270px);
-    transform: translateX(270px);
-    -webkit-transition: 0.5s;
-    -o-transition: 0.5s;
-    transition: 0.5s;
-  }
-
 p {
     margin-bottom: 30px;
     font-style: 18px;
-}
-
-h1, h2, h3, h4, h5, h6, figure {
-    color: #000;
-    font-family: "Cormorant Garamond", Georgia, serif;
-    font-weight: 400;
-    margin: 0 0 20px 0;
 }
 
 ::-webkit-selection {
@@ -187,38 +89,6 @@ h1, h2, h3, h4, h5, h6, figure {
 ::selection {
     color: #fff;
     background: #ea272d;
-}
-
-h1 {
-    text-align: center;
-    margin: 20px 0;
-}
-
-#searchForm {
-    display: flex;
-    justify-content: center;
-    margin: 20px 0;
-}
-
-#searchForm input {
-    width: 300px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-#searchForm button {
-    padding: 10px 20px;
-    margin-left: 10px;
-    background-color: #007BFF;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-#searchForm button:hover {
-    background-color: #0056b3;
 }
 
 #pagination {
