--- a/static/main/css/searchbar.css
+++ b/static/main/css/searchbar.css
@@ -104,19 +104,27 @@
 }
 
 .searchContainer input:focus ~ .search::before {
-  top: 0;
-  left: 0;
-  width: 25px;
+  content: "";
+  position: absolute;
+  margin: auto;
+  top: 22px;
+  right: 0;
+  bottom: 0;
+  left: 22px;
+  width: 12px;
+  height: 2px;
+  background: white;
 }
 
 .searchContainer input:focus ~ .search::after {
-  top: 0;
-  left: 0;
+  top: -5px;
+  right: 0;
+  bottom: 0;
+  left: -5px;
   width: 25px;
-  height: 2px;
-  border: none;
-  background: white;
-  border-radius: 0%;
+  height: 25px;
+  border-radius: 50%;
+  border: 2px solid white;
   transform: rotate(-45deg);
 }
 
