--- a/static/main/css/card.css
+++ b/static/main/css/card.css
@@ -55,16 +55,16 @@
 }
 
 .card h3::-webkit-scrollbar {
-    width: 6px; /* Lebar scrollbar */
+    width: 6px; 
 }
 
 .card h3::-webkit-scrollbar-thumb {
-    background: #666; /* Warna scrollbar */
+    background: #666; 
     border-radius: 4px;
 }
 
 .card h3::-webkit-scrollbar-track {
-    background: #222; /* Latar belakang scrollbar */
+    background: #222; 
 }
 
 .movie-placeholder {
@@ -72,7 +72,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 60%; /* Sama dengan tinggi gambar */
+    height: 60%;
     background-color: #444;
     border-radius: 12px 12px 0 0;
     color: #fff;
